Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-1188

Segfault when trying to serialize a DataFrame with Null-only Categorical Column

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.5.0
    • Python
    • None

    Description

      import pandas as pd
      import feather
      print("Pandas: %s" % pd.__version__)
      print("Feather: %s" % feather.version.version)
      df = pd.DataFrame({"A": (1, 2, 3), "B": ("a", "b", "c")})   # if we use this line everything works fine
      df = pd.DataFrame({"A": (1, 2, 3), "B": (None, None, None)})
      df = df.assign(B=df.B.astype("category"))
      #feather.write_dataframe(df, "/tmp/foo.feather")   # this segfaults!
      
      Pandas: 0.19.2
      Feather: 0.4.0
      

      Attachments

        Activity

          People

            wesm Wes McKinney
            pmav99 Panagiotis Mavrogiorgos
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: