ARROW-1188: [Python] Handle Feather case where category values are null type

We already had handled a dense null array in ARROW-1187, but the dictionary write path was circumventing that code

Author: Wes McKinney <wes.mckinney@twosigma.com>

Closes #863 from wesm/ARROW-1188 and squashes the following commits:

43e970d1 [Wes McKinney] Intercept NullArray in Dictionary Feather write path so that written as an all-null StringArray as with non-dictionary NullArray
a31e3358 [Wes McKinney] Add failing test case